<resources>
    <string name="app_name">TimerQuiz</string>
    <string name="count_label">Q%d</string>
    <string name="question_label">問題文</string>
    <string name="time">%d%d:%d%d</string>

    <string name="result_title">結果</string>
    <string name="result_score">%d問中%d問正解</string>
    <string name="total">解答数：%d</string>
    <string name="score">正解数：%d</string>
    <string name="btn_try_again">もう一度</string>


    <string name="time_text_hint">秒数を入力してください</string>
</resources>