<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="75sp"
        android:text="@string/question_label"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/countLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/answerText"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/questionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/answerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="380sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>